@@ -6,6 +6,6 @@ package com.javarush.task.task35.task3501;
 
 public class Solution {
     public static void main(String[] args) {
-        Number number = GenericStatic.<Number>someStaticMethod(new Integer(3));
+        Number number = GenericStatic.<Number>someStaticMethod(Integer.valueOf(3));
     }
 }
